feat: add Java 9 specific parameters